<resources>
    <string name="app_name">G1-Chat</string>
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_submit">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill in all the fields.</string>
    <string name="error_fields_empty">Please fill in the field.</string>
    <string name="err_login">The username or password is incorrect.</string>
    <string name="title_activity_newsflash">Newsflash</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_newsflash">Create Newsflash</string>
    <string name="create_newsflash_title_hint">Title</string>
    <string name="create_newsflash_content_hint">Content</string>
    <string name="create_newsflash_submit">SUBMIT</string>
    <string name="create_newsflash">CREATE NEWSFLASH</string>
    <string name="edit_message">Edit Message</string>
    <string name="err_create_newsflash">Newsflash was not created.</string>
    <string name="title_activity_admin">Admin</string>
    <string name="add_user">User</string>
    <string name="add_news">News</string>
    <string name="reg_user">REGISTER NEW USER</string>
    <string name="title_activity_user_list">Users</string>
    <string name="register_title">Register</string>
    <string name="register_button_submit">ADD USER</string>
    <string name="register_name">Name</string>
    <string name="activity_register">Register</string>
    <string name="title_activity_chat">Chat</string>
    <string name="chat_text">Comment</string>
    <string name="chat_button">Send</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="err_chat_refresh">Error when retrieving messages.</string>
    <string name="err_chat_send">Error when sending message.</string>
    <string name="err_fields_illegal">The input contains illegal characters.</string>
    <string name="save_button">SAVE</string>
    <string name="title_activity_edit">EDIT</string>
    <string name="name">NAME:</string>
    <string name="username">USERNAME:</string>
    <string name="create_channel">CREATE CHANNEL</string>
    <string name="save">Save</string>
    <string name="title_activity_channel_list">Select Chat Channel</string>
    <string name="title_activity_create_channel">New Chat Channel</string>
    <string name="channel_name">Name</string>

</resources>
