<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.blueit.g1_chat.Activity">

    <item android:id="@+id/action_admin"
        android:title="@string/title_activity_admin"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_user"
        android:title="@string/add_user"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_news"
        android:title="@string/add_news"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
