<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register_title"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"/>

    <EditText
        style="@style/MyEditTextStyle"
        android:layout_marginTop="30dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name1_text"
        android:hint="@string/register_name" />

    <EditText
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_text"
        android:hint="@string/login_username" />

    <EditText
        style="@style/MyEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass_text"
        android:hint="@string/login_password" />

    <Button
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_marginTop="30dip"
        android:text="@string/register_button_submit"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>