<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blueit.g1_chat.NewsflashActivity">

    <item android:id="@+id/action_news"
        android:title="@string/title_activity_newsflash"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_chat"
        android:title="@string/chat"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:visible="true"
        android:orderInCategory="100"
        app:showAsAction="never"/>
</menu>
