<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.blueit.g1_chat.CreateNewsflashActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_newsflash_title"
        android:hint="@string/create_newsflash_title_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_newsflash_content"
        android:hint="@string/create_newsflash_content_hint" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_newsflash_submit"
        android:id="@+id/create_newsflash_submit"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
