<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    tools:context="com.blueit.g1_chat.UserListActivity"
    >

    <TextView
        style="@style/MyTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/static_name"
        android:textStyle="bold"
        android:layout_alignTop="@+id/static_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/MyTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username"
        android:id="@+id/static_username"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/static_name"
        android:layout_toEndOf="@+id/static_name"
        android:layout_alignParentTop="true" />

    <View
        android:layout_width="55dip"
        android:layout_height="1px"
        android:id="@+id/static_line1"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@color/red"
        android:layout_below="@+id/static_name"/>

    <View
        android:layout_width="100dip"
        android:layout_height="1px"
        android:background="@color/red"
        android:layout_below="@+id/static_username"
        android:layout_alignLeft="@+id/static_username"
        android:layout_alignStart="@+id/static_username" />

    <ListView
        android:listSelector="@android:color/transparent"
        android:transcriptMode="alwaysScroll"
        android:divider="@null"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/user_listview"
        tools:listitem="@layout/userlist_item"
        android:layout_below="@+id/static_line1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        style="@style/MyButton"
        android:id="@+id/btn_reg_user"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:text="@string/reg_user"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
